--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -12,5 +12,17 @@
 }
 
 .inspections {
-  min-height: 395px;
+  height: 395px;
+}
+
+.red {
+  background-color: rgba(255, 123, 123, 0.25);
+}
+
+.green {
+  background-color: rgba(127, 255, 123, 0.25);
+}
+
+.result-body {
+  text-align: center;
 }
